[tool.poetry]
name = "rrnn-tasks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rrnn_tasks"}]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
matplotlib = "^3.0"
numpy = "^1.0"
scipy = "^1.0"
jupyter = "^1.0.0"
scikit-learn = "^1.2"
setuptools = "^67.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
